add_subdirectory(JM)
add_subdirectory(SIBsim4)
add_subdirectory(aha)
add_subdirectory(d)
if(NOT ARCH STREQUAL "PowerPC")
# This test has problems running on powerpc starting with r295538 and should
# be restored when the issue is corrected.
  add_subdirectory(oggenc)
endif()
add_subdirectory(sgefa)
add_subdirectory(spiff)
add_subdirectory(viterbi)

if(NOT DEFINED DISABLE_CXX)
  add_subdirectory(ALAC)
  add_subdirectory(hbd)
  add_subdirectory(lambda-0.1.3)
  add_subdirectory(minisat)
  if(NOT TARGET_OS STREQUAL "SunOS")
    add_subdirectory(hexxagon)
  endif()
endif()
if(NOT DEFINED SMALL_PROBLEM_SIZE)
  add_subdirectory(lua)
endif()
if(TARGET_OS STREQUAL "Linux" AND (NOT ARCH STREQUAL "XCore"))
  add_subdirectory(obsequi)
endif()
if(NOT TARGET_OS STREQUAL "SunOS")
  if(NOT DEFINED DISABLE_CXX)
    add_subdirectory(kimwitu++)
  endif()
endif()
if(NOT TARGET_OS STREQUAL "SunOS")
  add_subdirectory(SPASS)
endif()
if(NOT ARCH STREQUAL "XCore")
  add_subdirectory(ClamAV)
  add_subdirectory(lemon)
  add_subdirectory(siod)
endif()
if((NOT ARCH STREQUAL "PowerPC") AND (NOT ARCH STREQUAL "XCore"))
  add_subdirectory(sqlite3)
endif()
if(NOT TEST_SUITE_BENCHMARKING_ONLY)
  add_subdirectory(Burg)
  add_subdirectory(treecc)
endif()
