add_subdirectory(ASCI_Purple)
add_subdirectory(ASC_Sequoia)
add_subdirectory(BitBench)
add_subdirectory(Fhourstones)
add_subdirectory(Fhourstones-3.1)
add_subdirectory(FreeBench)
add_subdirectory(MallocBench)
add_subdirectory(McCat)
add_subdirectory(MiBench)
add_subdirectory(NPB-serial)
add_subdirectory(Olden)
add_subdirectory(Prolangs-C)
add_subdirectory(Ptrdist)
add_subdirectory(SciMark2-C)
add_subdirectory(Trimaran)
add_subdirectory(VersaBench)
add_subdirectory(llubenchmark)
add_subdirectory(mediabench)
add_subdirectory(nbench)
add_subdirectory(sim)
add_subdirectory(DOE-ProxyApps-C)

if((NOT "${TARGET_OS}" STREQUAL "Darwin") OR (NOT "${ARCH}" STREQUAL "ARM"))
  add_subdirectory(TSVC)
endif()
if(NOT DEFINED DISABLE_CXX)
  add_subdirectory(Prolangs-C++)
  add_subdirectory(Bullet)
  add_subdirectory(tramp3d-v4)
  if(NOT "${ARCH}" STREQUAL "XCore")
    add_subdirectory(7zip)
    add_subdirectory(PAQ8p)
  endif()
endif()
if(NOT DEFINED SMALL_PROBLEM_SIZE)
  add_subdirectory(mafft)
endif()
