if(NOT WIN32)
  find_package(Threads)
  list(APPEND LDFLAGS ${CMAKE_THREAD_LIBS_INIT})
  foreach(lib ${CMAKE_DL_LIBS})
    list(APPEND LDFLAGS -l${lib})
  endforeach()
endif()
if(NOT MSVC)
  list(APPEND CXXFLAGS "-std=c++11")
endif()

macro(test_img_input img)
  llvm_test_run(%S/../images/${img}.bytes ${ARGN} %S/${img}_out.bytes)
  llvm_test_verify(%b/${FPCMP} %S/output/${img}_out.bytes %S/${img}_out.bytes)
endmacro()
macro(test_img_data target img)
  llvm_test_data(${target} ../images/${img}.bytes)
  llvm_test_data(${target} output/${img}_out.bytes)
endmacro()

if(ARCH STREQUAL "x86")
  add_subdirectory(local_laplacian)
  add_subdirectory(bilateral_grid)
  add_subdirectory(blur)
endif()
